# imfuse-infer

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
src/imfuse_infer/: __init__.py  cli.py  predictor.py
src/imfuse_infer/io/: checkpoint.py  nifti.py
src/imfuse_infer/model/: imfuse.py  layers.py  mamba_adapter.py
src/imfuse_infer/model/_vendor_mambapy/: __init__.py  mamba.py  pscan.py
src/imfuse_infer/preprocessing/: normalize.py
