[project]
name = "imfuse-infer"
version = "0.1.0"
description = "Inference library for IM-Fuse brain tumor segmentation model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy",
    "nibabel",
]

[project.optional-dependencies]
cuda = ["mamba-ssm>=2.0", "causal-conv1d"]
safetensors = ["safetensors"]
all = ["mamba-ssm>=2.0", "causal-conv1d", "safetensors"]
dev = ["pytest"]

[project.scripts]
imfuse-infer = "imfuse_infer.cli:main"
